Added solution.md
