# src/main/java/za/co/sanlam/transferservice/model/Ledger.java
@@ -1,40 +1,0 @@
-package za.co.sanlam.transferservice.model;
-
-import jakarta.persistence.*;
-import lombok.AllArgsConstructor;
-import lombok.Builder;
-import lombok.Data;
-import lombok.NoArgsConstructor;
-
-import java.math.BigDecimal;
-
-@AllArgsConstructor
-@NoArgsConstructor
-@Builder
-@Data
-@Entity
-public class Ledger {
-    @Id
-    @GeneratedValue(strategy = GenerationType.AUTO)
-    private Long id;
-
-    @Version
-    private Long version;
-
-    // Which account
-    @Column(nullable = false)
-    private String accountId;
-
-    // DEBIT/CREDIT
-    @Column(nullable = false)
-    private TransactionType transactionType;
-
-    // BigDecimal - preserves when rounding
-    @Column(nullable = false)
-    private BigDecimal amount;
-
-    @ManyToOne(fetch = FetchType.LAZY)
-    @JoinColumn(name = "transfer_id")
-    private Transfer transfer;
-
-}
